src/objects/Service_Savings_Delivered__c.object
<CustomObject>
    <description>Object to track the savings achieved by services per case.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of savings for the Service.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>The case the savings is related to.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Services/Savings Delivered</relationshipLabel>
        <relationshipName>Services_Savings_Delivered</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The service that was delivered that had some savings.</description>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Exception</fullName>
                </value>
                <value>
                    <fullName>Claim Assistance</fullName>
                </value>
                <value>
                    <fullName>Gap Exception</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Provided Community Resources</fullName>
                </value>
                <value>
                    <fullName>Provider Search and/or Shift</fullName>
                </value>
                <value>
                    <fullName>Rx LCA Support</fullName>
                </value>
                <value>
                    <fullName>Rx Mail Order Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for the service and savings.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service/Savings Delivered</label>
    <nameField>
        <displayFormat>SSD-{00000}</displayFormat>
        <label>Service/Savings Delivered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services/Savings Delivered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>